--- a/SmartHouseControl/SmartHouseControl/ControlPanel.html
+++ b/SmartHouseControl/SmartHouseControl/ControlPanel.html
@@ -70,9 +70,25 @@
     </div>
 
     <br />
+
+    <script type="text/javascript">
+        function changeRed() {
+            document.getElementById('imageGreen').innerHTML = '<img src="images/floor plan red.jpg"/>';
+        }
+    </script> 
+    <script type="text/javascript">
+        function changeGreen() {
+            document.getElementById('imageGreen').innerHTML = '<img src="images/floor plan green.jpg"/>';
+        }
+    </script> 
+
     <div class="container" id="floorImage" name="floorImageOverview">
         <div class="centered">
-            <img src="images/floor plan.png" height="450px"/>
+            <span id="imageGreen" class="container"><img src="images/floor plan.jpg"/></span> 
+            <br /> <!-- Line breaker -->
+            <h3 class="centered">Press the buttons to lock or unlock the house</h3>
+            <input type=button onClick="changeRed()" value='Lock house'/>
+            <input type=button onClick="changeGreen()" value='Unlock house' />
         </div>
     </div>
     
@@ -87,7 +103,19 @@
 			<h2 class="centered">Kitchen</h2>
             <div class="centered">
                 <img src="images/KitchenRoom.PNG" height="400px" />
-                <h2 class="centered"> Probaly some buttons down here to adjust light, temp etc.</h2>
+                <div class="centered">
+                    <input type=button onClick="location.href = 'ControlPanel.html#kitchenRoom'" value='Turn on/off light' />
+                    <h5>Slide the bar to adjust the temperature</h5>
+                    <input type="range" min="15" max="25" value="15" step="1" onchange="showValue(this.value)" />
+                    <span id="range">15</span>
+
+                    <script type="text/javascript">
+                        function showValue(newValue) {
+                            document.getElementById("range").innerHTML = newValue;
+                        }
+                    </script>
+
+                </div>
             </div>
 		</div>
 	</div>
