--- a/SmartHouseControl/SmartHouseControl/ControlPanel.html
+++ b/SmartHouseControl/SmartHouseControl/ControlPanel.html
@@ -71,6 +71,7 @@
 
     <br />
 
+    <!-- JavaScript for changing lock-->
     <script type="text/javascript">
         function changeRed() {
             document.getElementById('imageGreen').innerHTML = '<img src="images/floor plan red.jpg"/>';
@@ -102,16 +103,33 @@
 		<div class="row">
 			<h2 class="centered">Kitchen</h2>
             <div class="centered">
-                <img src="images/KitchenRoom.PNG" height="400px" />
+                <!--<img src="images/KitchenRoom.PNG" height="400px" />-->
+                <div style="position: relative; ">
+                    <img src="images/KitchenRoom.PNG" height="400px" style="position: relative;"/>
+                    <img id="myImage" onclick="changeImage()" src="images/LightBulbOff.png" style="position: absolute;"/>
+                </div>
+
                 <div class="centered">
-                    <input type=button onClick="location.href = 'ControlPanel.html#kitchenRoom'" value='Turn on/off light' />
+                    <script>
+                        function changeImage() {
+                            var image = document.getElementById('myImage');
+                            if (image.src.match("LightBulbOn")) {
+                                image.src = "images/LightBulbOff.png";
+                            }
+                            else {
+                                image.src = "images/LightBulbOn.png";
+                            }
+                        }
+                    </script>
+                    <!--<img id="myImage" onclick="changeImage()" src="images/LightBulbOff.png">-->
+
                     <h5>Slide the bar to adjust the temperature</h5>
-                    <input type="range" min="15" max="25" value="15" step="1" onchange="showValue(this.value)" />
-                    <span id="range">15</span>
+                    <input type="range" min="15" max="25" value="10" step="1" onchange="showValue(this.value)" />
+                    <span id="range">15 degrees celsius</span>
 
                     <script type="text/javascript">
                         function showValue(newValue) {
-                            document.getElementById("range").innerHTML = newValue;
+                            document.getElementById("range").innerHTML = newValue + " degrees celsius";
                         }
                     </script>
 
