--- a/SmartHouseControl/SmartHouseControl/index.html
+++ b/SmartHouseControl/SmartHouseControl/index.html
@@ -39,7 +39,7 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-			<li><a class="smoothScroll"><img src="images/SmartHouseLogo.jpg" alt="logo" height="20px"></a></li>
+			<li><a class="smoothScroll"><img src="images/logo.jpg" alt="logo" height="20px"></a></li>
             <li><a href="#home" class="smoothScroll">Home</a></li>
             <li> <a href="#services" class="smoothScroll"> About</a></li>
             <li> <a href="#about" class="smoothScroll"> Videos</a></li>
