--- a/SmartHouseControl/SmartHouseControl/ControlPanel.html
+++ b/SmartHouseControl/SmartHouseControl/ControlPanel.html
@@ -31,7 +31,7 @@
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li><a class="smoothScroll">
-                            <img src="images/logo.jpg" alt="logo" height="20px"></a></li>
+                            <img src="images/Logo for WebPage.png" alt="logo" height="20px"></a></li>
                         <li><a href="index.html#home" class="smoothScroll">Home</a></li>
                         <li><a href="index.html#services" class="smoothScroll">About</a></li>
                         <li><a href="index.html#about" class="smoothScroll">Videos</a></li>
