--- a/SmartHouseControl/SmartHouseControl/ControlPanel.html
+++ b/SmartHouseControl/SmartHouseControl/ControlPanel.html
@@ -70,7 +70,7 @@
     </div>
 
     <div class="container" id="floorImage" name="floorImageOverview">
-        <h3 class="centered">Press to lock or unlock the house</h3>
+        <h3 class="centered">Click on the image to lock or unlock the house</h3>
         <div class="centered">
             <div style="position: relative;" id="floorPlanDiv">
                 <img id="myFloorPlan" onclick="changeImageFloor()" src="images/floorPlanGreen.jpg" />
@@ -142,7 +142,7 @@
                                     $('input[name=' + fieldName + ']').val(currentVal + 1);
                                     postTemperature(currentVal + 1, "1");
                                 } else {
-                                    // Otherwise put a 0 there
+                                    // Otherwise put a 25 there
                                     $('input[name=' + fieldName + ']').val(25);
                                 }
                             });
@@ -154,13 +154,13 @@
                                 fieldName = $(this).attr('field');
                                 // Get its current value
                                 var currentVal = parseInt($('input[name=' + fieldName + ']').val());
-                                // If it isn't undefined or its greater than 0
+                                // If it isn't undefined or its greater than 15
                                 if (!isNaN(currentVal) && currentVal > 15) {
                                     // Decrement one
                                     $('input[name=' + fieldName + ']').val(currentVal - 1);
                                     postTemperature(currentVal - 1, "1");
                                 } else {
-                                    // Otherwise put a 0 there
+                                    // Otherwise put a 15 there
                                     $('input[name=' + fieldName + ']').val(15);
                                 }
                             });
@@ -216,12 +216,13 @@
                                 if (!isNaN(currentVal) && currentVal < 25) {
                                     // Increment
                                     $('input[name=' + fieldName + ']').val(currentVal + 1);
+                                    postTemperature(currentVal + 1, "2");
                                 } else {
-                                    // Otherwise put a 0 there
+                                    // Otherwise put a 25 there
                                     $('input[name=' + fieldName + ']').val(25);
                                 }
                             });
-                            // This button will decrement the value till 0
+                            // This button will decrement the value till 15
                             $(".qtyminuslivingroom").click(function (e) {
                                 // Stop acting like a button
                                 e.preventDefault();
@@ -229,19 +230,19 @@
                                 fieldName = $(this).attr('field');
                                 // Get its current value
                                 var currentVal = parseInt($('input[name=' + fieldName + ']').val());
-                                // If it isn't undefined or its greater than 0
+                                // If it isn't undefined or its greater than 15
                                 if (!isNaN(currentVal) && currentVal > 15) {
                                     // Decrement one
                                     $('input[name=' + fieldName + ']').val(currentVal - 1);
+                                    postTemperature(currentVal - 1, "2");
                                 } else {
-                                    // Otherwise put a 0 there
+                                    // Otherwise put a 15 there
                                     $('input[name=' + fieldName + ']').val(15);
                                 }
                             });
                         });
 
                     </script>
-
             </div>
 		</div>
 	</div>
@@ -267,6 +268,56 @@
                         }
                     }
                 </script>
+
+                <h4>Increment or decrement the temperature</h4>
+                    <img id="radiatorGuestRoom" src="images/Radiator.jpg" height="80px" width="auto"/>
+                    <!-- Credit goes to: http://jsfiddle.net/laelitenetwork/puJ6G/ -->
+                    <form id='guestRoomForm' method='POST' action='#'>
+                        <input type='button' value='-' class='qtyminusguestroom' field='quantityguestroom' />
+                        <input type='text' name='quantityguestroom' value='15' class='qty' />
+                        <input type='button' value='+' class='qtyplusguestroom' field='quantityguestroom' />
+                    </form>
+                    <script>
+                        jQuery(document).ready(function () {
+                            // This button will increment the value
+                            $('.qtyplusguestroom').click(function (e) {
+                                // Stop acting like a button
+                                e.preventDefault();
+                                // Get the field name
+                                fieldName = $(this).attr('field');
+                                // Get its current value
+                                var currentVal = parseInt($('input[name=' + fieldName + ']').val());
+                                // If is not undefined
+                                if (!isNaN(currentVal) && currentVal < 25) {
+                                    // Increment
+                                    $('input[name=' + fieldName + ']').val(currentVal + 1);
+                                    postTemperature(currentVal + 1, "3");
+                                } else {
+                                    // Otherwise put a 25 there
+                                    $('input[name=' + fieldName + ']').val(25);
+                                }
+                            });
+                            // This button will decrement the value till 15
+                            $(".qtyminusguestroom").click(function (e) {
+                                // Stop acting like a button
+                                e.preventDefault();
+                                // Get the field name
+                                fieldName = $(this).attr('field');
+                                // Get its current value
+                                var currentVal = parseInt($('input[name=' + fieldName + ']').val());
+                                // If it isn't undefined or its greater than 15
+                                if (!isNaN(currentVal) && currentVal > 15) {
+                                    // Decrement one
+                                    $('input[name=' + fieldName + ']').val(currentVal - 1);
+                                    postTemperature(currentVal - 1, "3");
+                                } else {
+                                    // Otherwise put a 15 there
+                                    $('input[name=' + fieldName + ']').val(15);
+                                }
+                            });
+                        });
+
+                    </script>
             </div>
 		</div>
 	</div>
@@ -316,6 +367,57 @@
                         }
                     }
                 </script>
+
+                                <h4>Increment or decrement the temperature</h4>
+                    <img id="radiatorDiningRoom" src="images/Radiator.jpg" height="80px" width="auto"/>
+                    <!-- Credit goes to: http://jsfiddle.net/laelitenetwork/puJ6G/ -->
+                    <form id='diningRoomForm' method='POST' action='#'>
+                        <input type='button' value='-' class='qtyminusdiningroom' field='quantitydiningroom' />
+                        <input type='text' name='quantitydiningroom' value='15' class='qty' />
+                        <input type='button' value='+' class='qtyplusdiningroom' field='quantitydiningroom' />
+                    </form>
+                    <script>
+                        jQuery(document).ready(function () {
+                            // This button will increment the value
+                            $('.qtyplusdiningroom').click(function (e) {
+                                // Stop acting like a button
+                                e.preventDefault();
+                                // Get the field name
+                                fieldName = $(this).attr('field');
+                                // Get its current value
+                                var currentVal = parseInt($('input[name=' + fieldName + ']').val());
+                                // If is not undefined
+                                if (!isNaN(currentVal) && currentVal < 25) {
+                                    // Increment
+                                    $('input[name=' + fieldName + ']').val(currentVal + 1);
+                                    postTemperature(currentVal + 1, "4");
+                                } else {
+                                    // Otherwise put a 25 there
+                                    $('input[name=' + fieldName + ']').val(25);
+                                }
+                            });
+                            // This button will decrement the value till 15
+                            $(".qtyminusdiningroom").click(function (e) {
+                                // Stop acting like a button
+                                e.preventDefault();
+                                // Get the field name
+                                fieldName = $(this).attr('field');
+                                // Get its current value
+                                var currentVal = parseInt($('input[name=' + fieldName + ']').val());
+                                // If it isn't undefined or its greater than 15
+                                if (!isNaN(currentVal) && currentVal > 15) {
+                                    // Decrement one
+                                    $('input[name=' + fieldName + ']').val(currentVal - 1);
+                                    postTemperature(currentVal - 1, "4");
+                                } else {
+                                    // Otherwise put a 15 there
+                                    $('input[name=' + fieldName + ']').val(15);
+                                }
+                            });
+                        });
+
+                    </script>
+
             </div>
 		</div>
 	</div>
