Tilføjet nyt radiator billede

--- a/SmartHouseControl/SmartHouseControl/ControlPanel.html
+++ b/SmartHouseControl/SmartHouseControl/ControlPanel.html
@@ -117,8 +117,8 @@
                         }
                     </script>
 
-                    <h4>Increment or decrement the temperature</h4>
-                    <img id="radiatorKitchen" src="images/Radiator.jpg" height="80px" width="auto"/>
+                    <h4>Increase or decrease the temperature</h4>
+                    <img id="radiatorKitchen" src="images/Radiator.png" height="80px" width="auto"/>
                     <!-- Credit goes to: http://jsfiddle.net/laelitenetwork/puJ6G/ -->
                     <form id='kitchenForm' method='POST' action='#'>
                         <input type='button' value='-' class='qtyminuskitchen' field='quantitykitchen' />
@@ -194,8 +194,8 @@
                     }
                 </script>
 
-                <h4>Increment or decrement the temperature</h4>
-                    <img id="radiatorLivingRoom" src="images/Radiator.jpg" height="80px" width="auto"/>
+                <h4>Increase or decrease the temperature</h4>
+                    <img id="radiatorLivingRoom" src="images/Radiator.png" height="80px" width="auto"/>
                     <!-- Credit goes to: http://jsfiddle.net/laelitenetwork/puJ6G/ -->
                     <form id='livingRoomForm' method='POST' action='#'>
                         <input type='button' value='-' class='qtyminuslivingroom' field='quantitylivingroom' />
@@ -269,8 +269,8 @@
                     }
                 </script>
 
-                <h4>Increment or decrement the temperature</h4>
-                    <img id="radiatorGuestRoom" src="images/Radiator.jpg" height="80px" width="auto"/>
+                <h4>Increase or decrease the temperature</h4>
+                    <img id="radiatorGuestRoom" src="images/Radiator.png" height="80px" width="auto"/>
                     <!-- Credit goes to: http://jsfiddle.net/laelitenetwork/puJ6G/ -->
                     <form id='guestRoomForm' method='POST' action='#'>
                         <input type='button' value='-' class='qtyminusguestroom' field='quantityguestroom' />
@@ -368,8 +368,8 @@
                     }
                 </script>
 
-                                <h4>Increment or decrement the temperature</h4>
-                    <img id="radiatorDiningRoom" src="images/Radiator.jpg" height="80px" width="auto"/>
+                                <h4>Increase or decrease the temperature</h4>
+                    <img id="radiatorDiningRoom" src="images/Radiator.png" height="80px" width="auto"/>
                     <!-- Credit goes to: http://jsfiddle.net/laelitenetwork/puJ6G/ -->
                     <form id='diningRoomForm' method='POST' action='#'>
                         <input type='button' value='-' class='qtyminusdiningroom' field='quantitydiningroom' />
