Changed class names
Look and changes

--- a/SmartHouseControl/SmartHouseControl/ControlPanel.html
+++ b/SmartHouseControl/SmartHouseControl/ControlPanel.html
@@ -124,7 +124,7 @@
                     <!-- Credit goes to: http://jsfiddle.net/laelitenetwork/puJ6G/ -->
                     <form id='kitchenForm' method='POST' action='#'>
                         <input type='button' value='-' class='qtyminuskitchen' field='quantitykitchen' />
-                        <input type='text' name='quantitykitchen' value='15' class='qty' />
+                        <input type='text' name='quantitykitchen' value='15' class='qtykitchen' />
                         <input type='button' value='+' class='qtypluskitchen' field='quantitykitchen' />
                     </form>
 
@@ -203,7 +203,7 @@
                     <!-- Credit goes to: http://jsfiddle.net/laelitenetwork/puJ6G/ -->
                     <form id='livingRoomForm' method='POST' action='#'>
                         <input type='button' value='-' class='qtyminuslivingroom' field='quantitylivingroom' />
-                        <input type='text' name='quantitylivingroom' value='15' class='qty' />
+                        <input type='text' name='quantitylivingroom' value='15' class='qtylivingroom' />
                         <input type='button' value='+' class='qtypluslivingroom' field='quantitylivingroom' />
                     </form>
                     <script>
@@ -280,7 +280,7 @@
                     <!-- Credit goes to: http://jsfiddle.net/laelitenetwork/puJ6G/ -->
                     <form id='guestRoomForm' method='POST' action='#'>
                         <input type='button' value='-' class='qtyminusguestroom' field='quantityguestroom' />
-                        <input type='text' name='quantityguestroom' value='15' class='qty' />
+                        <input type='text' name='quantityguestroom' value='15' class='qtyguestroom' />
                         <input type='button' value='+' class='qtyplusguestroom' field='quantityguestroom' />
                     </form>
                     <script>
@@ -381,7 +381,7 @@
                     <!-- Credit goes to: http://jsfiddle.net/laelitenetwork/puJ6G/ -->
                     <form id='diningRoomForm' method='POST' action='#'>
                         <input type='button' value='-' class='qtyminusdiningroom' field='quantitydiningroom' />
-                        <input type='text' name='quantitydiningroom' value='15' class='qty' />
+                        <input type='text' name='quantitydiningroom' value='15' class='qtydiningroom' />
                         <input type='button' value='+' class='qtyplusdiningroom' field='quantitydiningroom' />
                     </form>
                     <script>
